--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,4 +1,4 @@
 arb-dir: lib/data/l10n
-template-arb-file: app_en.arb
+template-arb-file: app_fr.arb
 output-localization-file: app_localization.dart
 nullable-getter: false
