--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   cool_alert: ^2.0.1
   google_fonts: ^4.0.0
+  firebase_messaging: ^14.7.19
+  mailer: ^6.1.0
 
 
 
